--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -1,3 +1,123 @@
-.construction{
+.maker-body{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height:1400px;
+  background: linear-gradient(to right, #93a5cf, #e4efe9);
+}
+
+.makerimg{
+  position: fixed;
+  top: 30px;
+  border-radius: 300px;
+}
+
+.top_layer{
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+}
+
+.top_layer1{
+  width: 100%;
+  height: 700px;
+  background: linear-gradient(to right, #93a5cf, #e4efe9);
+}
+
+.top_layer1-title{
+  padding-top: 100px;
+  padding-bottom: 30px;
   text-align: center;
+  font-family: Roboto;
+  font-weight: 300;
+  font-size: 5rem;
+  color: rgb(87, 56, 0);
+}
+
+.top_layer1-body{
+  padding:0 200px;
+  font-size: 2rem;
+  color: rgb(61, 40, 0);
+}
+
+.quote-title{
+  padding-left: 200px;
+  padding-top: 50px;
+  font-family: Roboto;
+  font-size: 3rem;
+  color: rgb(77, 32, 0);
+}
+
+.quote{
+  padding: 20px 200px;
+  font-family: Dancing Script;
+  font-size: 3rem;
+  position: relative;
+  color: rgb(112, 9, 0);
+}
+
+.quote-author{
+  position: absolute;
+  bottom: 0;
+  right:20%;
+}
+
+.top_layer2{
+  border-radius: 100px;
+  width: 100%;
+  height: 450px;
+  position: relative;
+}
+
+.top_layer2.text-box{
+  position: absolute;
+  width: 15%;
+  top: 50%;
+  left: 23%;
+}
+
+.top_layer2-text{
+  color: #000;
+  font-family: Roboto;
+  font-size: 3.5rem;
+  font-weight: 300;
+  color: rgb(0, 87, 85);
+}
+
+.top_layer3{
+  width: 100%;
+  height: 265px;
+  background: #fff;
+  text-align: center;
+  background: linear-gradient(to right, #93a5cf, #e4efe9);
+}
+
+.follow-text{
+  font-family: Roboto;
+  font-size: 4rem;
+  margin: 2rem;
+  font-weight: 300;
+  color: rgb(10, 82, 23);
+}
+
+.icon-head{
+  display: inline-block;
+  margin: .8rem;
+}
+
+.icon-body{
+  width: 100%;
+  text-align: center;
+}
+.icon-body.text{
+  font-family: Roboto;
+  font-size: 1.5rem;
+  color: rgb(10, 82, 23);
+  font-weight: 600;
+}
+
+.icon-body.text:hover{
+  color: rgb(17, 141, 39);
 }
